# email_gen_eval_assistant

./: .env.example  .gitignore  README.md  breakdown.md  docker-compose.yml  plan.md
backend/: pyproject.toml  requirements.txt  run_comparison.py
backend/app/: dependencies.py  main.py
backend/app/routers/: comparison.py  evaluation.py  generation.py
backend/app/schemas/: evaluation.py  generation.py
backend/app/services/: comparison.py  evaluation_runner.py  metric_definitions.py  report_writer.py
backend/core/: base_graph.py  configuration.py  llm_provider.py
backend/data/: scenarios.json
backend/email_assistant/: utils.py
backend/email_assistant/ai_client/email_generation/: graph.py  schemas.py  state.py
backend/email_assistant/ai_client/email_generation/prompts/: critique.py  draft.py  finalize.py  plan_outline.py  validate_input.py
backend/email_assistant/ai_client/evaluation/: graph.py  schemas.py  state.py
backend/email_assistant/ai_client/evaluation/prompts/: judge_fact_recall.py  judge_fluency.py  judge_tone.py
backend/tests/: test_graphs.py  test_utils.py
frontend/: index.html
