[project]
name = "email-gen-assistant"
version = "1.0.0"
description = "Email Generation Assistant with LangGraph multi-agent graphs on Groq, plus a custom evaluation suite."
requires-python = ">=3.10"

[tool.flake8]
max-line-length = 100

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
